Proyecto de automatizaciÃón de API PetStore

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>api-test-qa-lab</artifactId>
+    <artifactId>api-test-pet-store</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>Sample Serenity BDD project using Cucumber</name>
